Added auto build to development server.